Solved the mystery of the right-navigation paragraph spacing
;)

--- a/FinalWeek/css/main.css
+++ b/FinalWeek/css/main.css
@@ -48,7 +48,7 @@ header{
   padding: 2rem 0;
 }
 
-#citations a, p{
+#citations a, #citation p{
     display: block;
     padding: 0 0 1.5rem .5rem;
 }
